23.12.2010 git
- added sourcebranch_id to table tbbranch, and making sure datamodel is consistent when
 branching
- get_and_increase_globalversion() when branching, instead of get_globalversion()
- modified structure of table tbscriptgeneration to improve its performance: instead of
 storing each script individually, we only store each segment of the path in the tree. 
- started modifying dbsync_update.inc.php to fullfill the new algorithm

- TODO: the whole test data must be regenerated, also the compatibility with the old
 branching mechanism is lost!!!

22.12.2010 git
This are changes resulting from the proposals of Harikrishnan Nair, Peter Kevin
 and Ramesh Raghavan. In particular, the document sent by Ramesh was very enlightning. 

Synchronization will be implemented as tree traversal beginning from the leaf
 in direction of the root until sourcebranch and scriptversion match. When traversing
  back, each encountered script will be added to a table tbscriptgeneration. When
 the traversing across the branches is done, the table tbscriptgeneration 
  is ORDERED BY script_id ASC and passed to a outputscript() routine as 
    it is already implemented now. To allow multiple synchronizations steps
	 to be processed at once, a session id is generated.
	 
Traversing back from leaf to root makes the traversal unique and easy. The only
 thing to be implemented as exception to the algorithm is when changing from
 production schema to development schema. In this case, all scripts which
 belong to HEAD but not to the traversal will be added to the output of the script.

Tagging will be implemented in this way: tags are stored in tbbranch with istag=1
 and being the sourcebranch the tagged branch and versionnr the moment where the
 tag was issued. When taking a branch to begin the traversal, the highest script number
 of HEAD is taken as starting point, when taking a tag the stored versionnr is taken instead. 
 
 
Changes: 